avances para responsive

--- a/clientes.html
+++ b/clientes.html
@@ -34,38 +34,29 @@
         </div>
     </nav>
 	</header>
+<body>
+	
+	<section class="galeria">
+		<img src="imagenes/m-tcs.png" alt=""></img>
+		<img src="imagenes/m-os.png" alt=""></img>
+		<img src="imagenes/m-pc.png" alt=""></img>
+		<img src="imagenes/m-fala.png" alt=""></img>
+		<img src="imagenes/m-shc.png" alt=""></img>
+        <img src="imagenes/m-HC.png" alt=""></img>
+        <img src="imagenes/m-amodil.png" alt=""></img>
+		<img src="imagenes/m-W.png" alt=""></img>
+		<img src="imagenes/m-ea.png" alt=""></img>
+        <img src="imagenes/m-airmooding.png" alt=""></img>
+        <img src="imagenes/m-vel.png" alt=""></img>
+		<img src="imagenes/m-mep.png" alt=""></img>
+	 </section>
 
-		<style class="item">
-		
-	</style>
-
-	<div class="tablero">
-		<div class="item level-1">
-			<img src="imagenes/organic.jpg" alt=""></div>
-		<div class="item level-2">
-			<img src="imagenes/mteadir.jpg" alt=""></div>
-		<div class="item level-3">
-			<img src="imagenes/uxui.jpg" alt=""></div>
-		<div class="item level-1">
-			<img src="imagenes/cozzy.jpg" alt=""></div>
-		<div class="item level-2">
-			<img src="imagenes/falabella.jpg" alt=""></div>
-		<div class="item level-3">
-			<img src="imagenes/AT_02.jpg" alt=""></div>
-		<div class="item level-3">
-			<img src="imagenes/local.jpg" alt=""></div>
-		<div class="item level-2">
-			<img src="imagenes/aromastone.jpg" alt=""></div>
-		<div class="item level-3">
-			<img src="imagenes/webOS.jpg" alt=""></div>
-	</div>
-			
-	<footer class="footer">
-		<a href="https://www.linkedin.com/in/julieta-pasetti"><img src="imagenes/IN.png" width="35" height="35">
-		<a href="https://www.behance.net/julietapasetti"><img src="imagenes/BE.png" width="35" height="35">
-			
-		</th>
-			</table>	
-			</footer>
-		</body>
-		</html>
+     <footer class="footer">
+        <a href="https://www.linkedin.com/in/julieta-pasetti"><img src="imagenes/IN.png" width="35" height="35">
+        <a href="https://www.behance.net/julietapasetti"><img src="imagenes/BE.png" width="35" height="35">
+            
+        </th>
+            </table>	
+            </footer>
+        </body>
+        </html>
