--- a/servicios.html
+++ b/servicios.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html lang="eng">
 <head>
-	<link rel="stylesheet" href="css/style.css">
-	<meta charset="UTF-8">
-	<title>JUPA</title>
-</head>
-<body>
-		<header>
-		<div class="topmenu">
-			<a href="index.html" class="topmenu__logo">
-			<img src="imagenes/J_logo.png" alt="JUPA" width="80%">
-			</a>
-
-			<nav id="nav-1">
-	
-			<nav class="topmenu__nav">
-				<ul>
-					<li><a class="link-1" href="index.html" >HOME</a></li>
-					<li><a class="link-1" href="proyectos.html">PROYECTOS</a></li>
-					<li><a class="link-1" href="servicios.html">SERVICIOS</a></li>
-					<li><a class="link-1" href="sobre-mi.html">CLIENTES</a></li>
-					<li><a class="link-1" href="contacto.html">CONTACTO</a></li>
-				</ul>
-			</nav>
-		</div>
+	    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="portfolio julieta pasetti">
+	<meta name="keywords" content="portfolio, diseño, gráfico, identidad, packaging, branding">
+	<link rel="icon" href="imagenes/favicon.png" type="image/png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <title>JUPA - Portfolio</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg sticky-top"  style="background-color: #fff;">
+        <div class="container">
+            <img src="imagenes/J_logo.png" width="10%"  alt="logo">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="icon ion-md-menu"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="proyectos.html">PROYECTOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="servicios.html">SERVICIOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="clientes.html">CLIENTES</a></li> 
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">CONTACTO</a></li>
+                 </ul>
+            </div>
+        </div>
+    </nav>
 	</header>
 
 	<div class="servicio" id="servicio">
@@ -40,39 +49,71 @@
 		</div>
 	</div>
 
-	<div class="hd">
-		<h2 class="conocimiento">CONOCIMIENTOS</h2>
-	 </div>
-  <div class="content1">
-	 <div class="circular">
-		<div class="circular-progress01"></div>
-		<div class="circular-text">Adobe Illustrator</div>
-		</div>
-	 
-	   <div class="circular">
-		<div class="circular-progress02"></div>
-		<div class="circular-text">Adobe Photoshop</div>
-		</div>
-	 
-	 
-	   <div class="circular">
-		<div class="circular-progress03"></div>
-		<div class="circular-text">Adobe Indesing</div>
-		</div>
-	 
-	 
-	   <div class="circular">
-		<div class="circular-progress04"></div>
-		<div class="circular-text">Adobe After Effects</div>
-		</div>
+	<section id="portfolio">
+        <div class="container-fluid">
+            <div class="row justify-content-md-center">
+                <div class="col-md-2">
+                    <div class="portfolio-container">
+                        <div class="portfolio-details"></div>
+                        <img src="imagenes/p2.jpg" class="img-fluid" alt="Portfolio 01">
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="portfolio-container">
+                        <div class="portfolio-details"></div>
+                        <img src="imagenes/p3.jpg" class="img-fluid" alt="Portfolio 02">
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="portfolio-container">
+                        <div class="portfolio-details"></div>
+                        <img src="imagenes/p1.jpg" class="img-fluid" alt="Portfolio 03">
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="portfolio-container">
+                        <div class="portfolio-details"></div>
+                        <img src="imagenes/p4.jpg" class="img-fluid" alt="Portfolio 04">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+		<div class="slider-marcas">
+			<div class="slide-track">
+				<div class="slide">
+					<img src="imagenes/m-tcs.png" height="150" width="150" alt="" />
+				</div>
+				<div class="slide">
+					<img src="imagenes/m-shc.png" height="150" width="150" alt="" />
+				</div>
+				<div class="slide">
+					<img src="imagenes/m-HC.png" height="150" width="150" alt="" />
+				</div>
+				<div class="slide">
+					<img src="imagenes/m-amodil.png" height="150" width="150" alt="" />
+				</div>
+				<div class="slide">
+					<img src="imagenes/m-os.png" height="150" width="150" alt="" />
+				</div>
+				<div class="slide">
+					<img src="imagenes/m-W.png" height="150" width="150" alt="" />
+				</div>
+				<div class="slide">
+					<img src="imagenes/m-pc.png" height="150" width="150" alt="" />
+				</div>
+				<div class="slide">
+					<img src="imagenes/m-airmooding.png" height="150" width="150" alt="" />
+				</div>
+				
+			</div>
 		</div>
 	 
-
 		<footer class="footer">
 			<a href="https://www.linkedin.com/in/julieta-pasetti"><img src="imagenes/IN.png" width="35" height="35">
 			<a href="https://www.behance.net/julietapasetti"><img src="imagenes/BE.png" width="35" height="35">
-				<h6> ©2020-Julieta Pasetti-Terminos y Condiciones-Políticas de Privacidad.</h6>
+				
 			</th>
 				</table>	
 				</footer>
