--- a/proyectos.html
+++ b/proyectos.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="portfolio julieta pasetti">
 	<meta name="keywords" content="portfolio, diseño, gráfico, identidad, packaging, branding">
-	<link rel="icon" href="imagenes/favicon.png" type="image/png" />
+	<link rel="icon" href="imagenes/favicon2.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky-top"  style="background-color: #fff;">
         <div class="container">
-            <img src="imagenes/J_logo.png" width="10%"  alt="logo">
+            <img src="imagenes/J_logo.png" width="20%"  alt="logo">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="icon ion-md-menu"></i>
