cambios entrega final

--- a/clientes.html
+++ b/clientes.html
@@ -35,21 +35,50 @@
     </nav>
 	</header>
 <body>
-	
-	<section class="galeria">
-		<img src="imagenes/m-tcs.png" alt=""></img>
-		<img src="imagenes/m-os.png" alt=""></img>
-		<img src="imagenes/m-pc.png" alt=""></img>
-		<img src="imagenes/m-fala.png" alt=""></img>
-		<img src="imagenes/m-shc.png" alt=""></img>
-        <img src="imagenes/m-HC.png" alt=""></img>
-        <img src="imagenes/m-amodil.png" alt=""></img>
-		<img src="imagenes/m-W.png" alt=""></img>
-		<img src="imagenes/m-ea.png" alt=""></img>
-        <img src="imagenes/m-airmooding.png" alt=""></img>
-        <img src="imagenes/m-vel.png" alt=""></img>
-		<img src="imagenes/m-mep.png" alt=""></img>
-	 </section>
+	<section id= "clientes" class= "container">
+	        <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <img src="imagenes/m-tcs.png" alt="clientes imagenes">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <img src="imagenes/m-HC.png" alt="clientes imagenes">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <img src="imagenes/m-shc.png" alt="clientes imagenes">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <img src="imagenes/m-mep.png" alt="clientes imagenes">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <img src="imagenes/m-os.png" alt="clientes imagenes">
+            </div>
+             <div class="col-lg-3 col-md-6 col-sm-12">
+                <img src="imagenes/m-vel.png" alt="clientes imagenes">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <img src="imagenes/m-pc.png" alt="clientes imagenes">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <img src="imagenes/m-airmooding.png" alt="clientes imagenes">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <img src="imagenes/m-amodil.png" alt="clientes imagenes">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <img src="imagenes/m-ea.png" alt="clientes imagenes">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <img src="imagenes/m-W.png" alt="clientes imagenes">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <img src="imagenes/m-fala.png" alt="clientes imagenes">
+            </div>
+
+        </div>
+
+
+
+    </section>
 
      <footer class="footer">
         <a href="https://www.linkedin.com/in/julieta-pasetti"><img src="imagenes/IN.png" width="35" height="35">
