--- a/proyectos.html
+++ b/proyectos.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky-top"  style="background-color: #fff;">
         <div class="container">
-            <img src="imagenes/J_logo.png" width="20%"  alt="logo">
+            <img src="imagenes/logo-jp.svg" width="20%"  alt="logo">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="icon ion-md-menu"></i>
@@ -34,31 +34,42 @@
         </div>
     </nav>
 	</header>
+	<section id= "tablero" class= "container">
 
-		<style class="item">
-		
-	</style>
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <img src="imagenes/p-exhibidor.jpg" alt="tablero imagenes">
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <img src="imagenes/p-oswebproducto.jpg" alt="tablero imagenes">
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <img src="imagenes/p-teadir.jpg" alt="tablero imagenes">
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <img src="imagenes/p-vibrarenluz.jpg" alt="tablero imagenes">
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <img src="imagenes/p-wabi.jpg" alt="tablero imagenes">
+            </div>
+             <div class="col-lg-4 col-md-6 col-sm-12">
+                <img src="imagenes/p-uxui.jpg" alt="tablero imagenes">
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <img src="imagenes/p-teadir.jpg" alt="tablero imagenes">
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <img src="imagenes/p-packaging.jpg" alt="tablero imagenes">
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <img src="imagenes/p-vidriera.jpg" alt="tablero imagenes">
+            </div>
 
-	<div class="tablero">
-		<div class="item level-1">
-			<img src="imagenes/organic.jpg" alt=""></div>
-		<div class="item level-2">
-			<img src="imagenes/mteadir.jpg" alt=""></div>
-		<div class="item level-3">
-			<img src="imagenes/uxui.jpg" alt=""></div>
-		<div class="item level-1">
-			<img src="imagenes/cozzy.jpg" alt=""></div>
-		<div class="item level-2">
-			<img src="imagenes/falabella.jpg" alt=""></div>
-		<div class="item level-3">
-			<img src="imagenes/AT_02.jpg" alt=""></div>
-		<div class="item level-3">
-			<img src="imagenes/local.jpg" alt=""></div>
-		<div class="item level-2">
-			<img src="imagenes/aromastone.jpg" alt=""></div>
-		<div class="item level-3">
-			<img src="imagenes/webOS.jpg" alt=""></div>
-	</div>
+        </div>
+
+
+
+    </section>
 			
 	<footer class="footer">
 		<a href="https://www.linkedin.com/in/julieta-pasetti"><img src="imagenes/IN.png" width="35" height="35">
