--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky-top"  style="background-color: #fff;">
         <div class="container">
-            <img src="imagenes/J_logo.png" width="20%"  alt="logo">
+            <img src="imagenes/logo-jp.svg" width="20%"  alt="logo">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="icon ion-md-menu"></i>
