correciones entrega final

--- a/contacto.html
+++ b/contacto.html
@@ -35,7 +35,7 @@
     </nav>
 	</header>
 		<section class="formulario">
-			<form action="#">
+			<form>
 				<h2>ESCRIBIME!</h2>
 				<input type="text" name="Nombre" placeholder="Nombre">
 				<input type="text" name="Correo" placeholder="Correo">
