--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     </nav>
 	</header>
 <section>
-	<div class="container-fluid">
-		<div class="content-center">
-            <h3>DISEÑADORA EN COMUNICACIÓN VISUAL</h3>
-		</div>
-	</div>
+
+    <div class="content-center">
+        <h3>DISEÑADORA EN COMUNICACIÓN VISUAL</h3>
+    </div>
+
 </section>
 	
 	<div class="slider">
@@ -53,20 +53,48 @@
 			</ul>
 	</div>
 	
-
+    <div class="slider-marcas">
+        <div class="slide-track">
+            <div class="slide">
+                <img src="imagenes/m-tcs.png" height="150" width="150" alt="" />
+            </div>
+            <div class="slide">
+                <img src="imagenes/m-shc.png" height="150" width="150" alt="" />
+            </div>
+            <div class="slide">
+                <img src="imagenes/m-HC.png" height="150" width="150" alt="" />
+            </div>
+            <div class="slide">
+                <img src="imagenes/m-amodil.png" height="150" width="150" alt="" />
+            </div>
+            <div class="slide">
+                <img src="imagenes/m-os.png" height="150" width="150" alt="" />
+            </div>
+            <div class="slide">
+                <img src="imagenes/m-W.png" height="150" width="150" alt="" />
+            </div>
+            <div class="slide">
+                <img src="imagenes/m-pc.png" height="150" width="150" alt="" />
+            </div>
+            <div class="slide">
+                <img src="imagenes/m-airmooding.png" height="150" width="150" alt="" />
+            </div>
+            
+        </div>
+    </div>
 	
 
     <section class="projects-section bg-white" id="projects">
         <div class="container">
             <!-- Featured Project Row-->
             
-            <<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+            <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                 <div class="col-lg-6"><img class="img-fluid" src="imagenes/image_1.jpg" alt="" /></div>
                 <div class="col-lg-6">
                     <div class="bg-dark text-justify p-5 h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
-                               <p class="mb-0 text-white-50 text-justify">SI PIERDES TU PROPÓSITO ES COMO SI TE ROMPIERAS</p>
+                               <p class="mb-0 text-white-50 text-center">SI PIERDES TU PROPÓSITO ES COMO SI TE ROMPIERAS</p>
                             </div>
                         </div>
                     </div>
