--- a/servicios.html
+++ b/servicios.html
@@ -55,7 +55,7 @@
                         <div class="bg-dark text-justify p-5 h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                   <p class="mb-0 text-white-50 text-justify">SI PIERDES TU PROPÓSITO ES COMO SI TE ROMPIERAS</p>
+                                   <p class="mb-0 text-white-50 text-center">SI PIERDES TU PROPÓSITO ES COMO SI TE ROMPIERAS</p>
                                 </div>
                             </div>
                         </div>
@@ -72,7 +72,7 @@
                                     <p class="mb-0 text-white-50"> - BRINDO SOLUCIONES. </p>
                                     <p class="mb-0 text-white-50"> - IMPULSO EXPERIENCIAS. </p>
                                     <p class="mb-0 text-white-50"> - GENERO CONEXIONES. </p>
-                                    <p class="mb-0 text-white-50"> - Branding. Digital. Comunicación. Editorial. Packaging. Mobiliario/Stand.</p>  
+                                    <p class="mb-0 text-white-50"> .Branding. Digital. Comunicación. Editorial. Packaging. Mobiliario/Stand.</p>  
                                  
                                 </div>
                             </div>
