--- a/proyectos.html
+++ b/proyectos.html
@@ -8,6 +8,7 @@
 	<link rel="icon" href="imagenes/favicon2.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@300&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -17,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky-top"  style="background-color: #fff;">
         <div class="container">
-            <img src="imagenes/logo-jp.svg" width="20%"  alt="logo">
+            <a href="index.html"><img src="imagenes/logo-jp.svg" width="30%"  alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="icon ion-md-menu"></i>
@@ -30,7 +31,8 @@
                     <li class="nav-item"><a class="nav-link" href="clientes.html">CLIENTES</a></li> 
                     <li class="nav-item"><a class="nav-link" href="contacto.html">CONTACTO</a></li>
                  </ul>
-            </div>
+                </div>
+                
         </div>
     </nav>
 	</header>
@@ -72,8 +74,8 @@
     </section>
 			
 	<footer class="footer">
-		<a href="https://www.linkedin.com/in/julieta-pasetti"><img src="imagenes/IN.png" width="35" height="35">
-		<a href="https://www.behance.net/julietapasetti"><img src="imagenes/BE.png" width="35" height="35">
+		<a href="https://www.linkedin.com/in/julieta-pasetti"><img src="imagenes/IN.png" width="35" height="35"></a>
+		<a href="https://www.behance.net/julietapasetti"><img src="imagenes/BE.png" width="35" height="35"></a>
 			
 		</th>
 			</table>	
