--- a/servicios.html
+++ b/servicios.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky-top"  style="background-color: #fff;">
         <div class="container">
-            <img src="imagenes/J_logo.png" width="20%"  alt="logo">
+            <a href="index.html"><img src="imagenes/logo-jp.svg" width="30%"  alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="icon ion-md-menu"></i>
@@ -31,7 +31,8 @@
                     <li class="nav-item"><a class="nav-link" href="clientes.html">CLIENTES</a></li> 
                     <li class="nav-item"><a class="nav-link" href="contacto.html">CONTACTO</a></li>
                  </ul>
-            </div>
+                </div>
+                
         </div>
     </nav>
 	</header>
@@ -83,8 +84,8 @@
         </section>
 	 
 		<footer class="footer">
-			<a href="https://www.linkedin.com/in/julieta-pasetti"><img src="imagenes/IN.png" width="35" height="35">
-			<a href="https://www.behance.net/julietapasetti"><img src="imagenes/BE.png" width="35" height="35">
+			<a href="https://www.linkedin.com/in/julieta-pasetti"><img src="imagenes/IN.png" width="35" height="35"></a>
+			<a href="https://www.behance.net/julietapasetti"><img src="imagenes/BE.png" width="35" height="35"></a>
 				
 			</th>
 				</table>	
