--- a/servicios.html
+++ b/servicios.html
@@ -39,7 +39,7 @@
 
     <section class="container my-4 py-4">
         <h3 class="text-uppercase text-center mb-4">Hola! SOY JUPA!</h3>
-        <p class="lead text-justify mb-5">Mi nombre es Julieta, me dicen Jupa. Soy Diseñadora en Comunicación Visual, recibida en el 2010. Cuento que una fuerte experiencia en el rubro editorial, cosmética y aromatización. Mi objetivo laboral radica en estar actualizado constantemente dentro del ámbito de mi profesión y afines. Me siento cómoda con la estabilidad. Necesito de todas formas que me permita crecer profesionalmente. Los desafíos son mi mejor campo para ampliar conocimientos. Soy resolutiva y curiosa.</p>
+        <p class="lead text-justify mb-5">Mi nombre es Julieta, me dicen Jupa. Soy Diseñadora en Comunicación Visual, recibida en el 2010. Cuento con una fuerte experiencia en el rubro editorial, cosmética y aromatización. Mi objetivo laboral radica en estar actualizado constantemente dentro del ámbito de mi profesión y afines. Me siento cómoda con la estabilidad. Necesito de todas formas que me permita crecer profesionalmente. Los desafíos son mi mejor campo para ampliar conocimientos. Soy resolutiva y curiosa.</p>
         <div class="card-deck"></div>
         </section>
        
